@@ -2,3 +2,4 @@
 #
 #
 DYNAMIC_LINKER=@DYNAMIC_LINKER@
+HAVE_LIBXML=@HAVE_LIBXML@
