@@ -708,6 +708,31 @@ else
 fi
 AC_SUBST(GS_FAKE_MAIN)
 
+#--------------------------------------------------------------------
+# Check recent libxlm for GSDoc etc.
+#--------------------------------------------------------------------
+echo "Checking for libxml"
+AC_CHECK_HEADERS(libxml/xmlversion.h)
+if test $ac_cv_header_libxml_xmlversion_h = no; then
+  echo "Could not find libxml headers"
+  echo "Check to make sure you have libxml version 2 or later installed"
+  AC_MSG_WARN(Could not find libxml headers)
+  HAVE_LIBXML=0
+else
+  AC_TRY_CPP([#include "libxml/xmlversion.h"
+    #if LIBXML_VERSION < 20000
+    #error
+    #endif], libxml2plus=1, libxml2plus=0)
+  if test $libxml2plus = 0; then
+    echo "libxml version older than 2.0.0"
+    AC_MSG_WARN(libxml version older than 2.0.0)
+    HAVE_LIBXML=0
+  else
+    HAVE_LIBXML=1
+  fi
+fi
+AC_SUBST(HAVE_LIBXML)
+
 
 AC_SUBST(whole_archive)
 AC_SUBST(no_whole_archive)
